vnetwithnsg_template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnetname": {
            "type": "string",
            "metadata": {
                "Descriptions": "Virtual Network Name"
            }
        },
        "subnetConfiguration": {
            "type": "array"
        }
    },
    "variables": {
        "firstsubnetname": "[first(parameters('subnetConfiguration')).name]"
    },
    "resources": [
        {
                "type": "Microsoft.Network/networkSecurityGroups",
                "apiVersion": "2018-08-01",
                "location": "[resourceGroup().location]",
                "name": "[concat(parameters('subnetConfiguration')[copyIndex('nsgcopy')].name,'-nsg')]",
                "properties": {
                    "securityRules": [
                        {
                            "name": "nsgRule1",
                            "properties": {
                                "description": "description",
                                "protocol": "Tcp",
                                "sourcePortRange": "443",
                                "destinationPortRange": "443",
                                "sourceAddressPrefix": "10.0.0.0/16",
                                "destinationAddressPrefix": "10.1.0.0/16",
                                "access": "Allow",
                                "priority": 100,
                                "direction": "Inbound"
                            }
                        },
                        {
                            "name": "nsgRule2",
                            "properties": {
                                "description": "description",
                                "protocol": "Tcp",
                                "sourcePortRange": "80",
                                "destinationPortRange": "80",
                                "sourceAddressPrefix": "10.1.0.0/16",
                                "destinationAddressPrefix": "10.0.0.0/16",
                                "access": "Allow",
                                "priority": 110,
                                "direction": "Outbound"
                            }
                        }
                    ]
                },
                "copy": {
                    "name": "nsgcopy",
                    "count": "[length(parameters('subnetConfiguration'))]"
                }
        },
        {
            "name": "[parameters('vnetname')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat(variables('firstsubnetname'),'-nsg')]"
            ],   
            "tags": {
            "displayName": "virtualNetwork1"
            },
            "properties": {
                
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "copy": [
                    {
                        "name": "subnets",
                        "count": "[length(parameters('subnetConfiguration'))]",
                        "input": {
                            "name": "[parameters('subnetConfiguration')[copyIndex('subnets')].name]",
                            "properties": {
                                "addressPrefix": "[parameters('subnetConfiguration')[copyIndex('subnets')].addressPrefix]",
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('subnetConfiguration')[copyIndex('subnets')].name,'-nsg'))]"
                                }
                            }
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {}
}
